# qt_android_app_baby_monitor

./: .gitignore  CMakeLists.txt  README.md  bleclient.cpp  bleclient.h  guiwindow.cpp  guiwindow.h  health_classifier.onnx  initialformwindow.cpp  initialformwindow.h  main.cpp  resources.qrc
android/: AndroidManifest.xml
